# sssp

./: .gitignore  .mcp.json  CMakeLists.txt  README.md  spec.md  test_base_case.cpp  test_binary_heap  test_block_structure  test_bmssp.cpp  test_complexity  test_find_pivots  test_graph  test_sssp_debug  test_transform  test_validate_transform
.cache/clangd/index/: api.cpp.7669977E7D8F74DD.idx  api.hpp.96D9347C71D9396D.idx  base_case.cpp.A9048AF16B3B4282.idx  base_case.hpp.A519D834A1CBE5AE.idx  bench_sssp.cpp.64D6950C3F475D4B.idx  binary_heap.hpp.BC71B6F28DC6D552.idx  block_data_structure.hpp.C1B07B34BD6BD37C.idx  bmssp.cpp.B8B33F64A14585DD.idx  bmssp.hpp.285AD94AADF7631C.idx  distance_query_smoke.cpp.A65BA9988BE03FF4.idx  edge.hpp.9C879DAFD1F2D964.idx  find_pivots.hpp.F4F7A3352DE044B7.idx  graph.hpp.4841328C8AB69F80.idx  graph_transform.hpp.56D0F5FB5010FFE4.idx  path.hpp.A15E1F1E387DE076.idx  path_smoke.cpp.3D5E3A6D437FF26D.idx  profiling.hpp.C75B120A37D275E0.idx  test_base_case.cpp.6BD130D8CBF37288.idx  test_binary_heap.cpp.EB440012AD8B3DEA.idx  test_block_structure.cpp.6C50F5A367D64BE0.idx  test_bmssp.cpp.151D5D7FBD153CB7.idx  test_complexity.cpp.A346D32D9C3F093C.idx  test_find_pivots.cpp.436D54B6C9FE0F26.idx  test_graph.cpp.34A6EBDA2B52A81F.idx  test_transform.cpp.977EB8C8CC1F2342.idx  test_validate_transform.cpp.07F54F1CE820B1A2.idx  tie_break.hpp.9951F2C194B31E18.idx  tie_break_smoke.cpp.C9B169182B8169A9.idx  types.hpp.88D403D97393CAB0.idx  vertex.hpp.E30A74D369B64015.idx
.claude/agents/: database-algorithm-engineer.md
.github/workflows/: ci.yml
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
benchmarks/: bench_sssp.cpp
build-gtest/: bench_sssp
build-gtest/Testing/Temporary/: CTestCostData.txt
build-prof/: bench_sssp  test_base_case  test_bmssp  test_distance_queries  test_paths  test_tie_break
build-prof/Testing/Temporary/: CTestCostData.txt
include/sssp/: api.hpp  base_case.hpp  binary_heap.hpp  block_data_structure.hpp  bmssp.hpp  edge.hpp  find_pivots.hpp  graph.hpp  graph_transform.hpp  path.hpp  profiling.hpp  tie_break.hpp  types.hpp  vertex.hpp
src/: api.cpp  base_case.cpp  bmssp.cpp  test_binary_heap.cpp  test_block_structure.cpp  test_complexity.cpp  test_find_pivots.cpp  test_graph.cpp  test_transform.cpp  test_validate_transform.cpp
tests/: api_smoke.cpp  distance_query_smoke.cpp  path_smoke.cpp  tie_break_smoke.cpp
